# test_technique_chemosens

./: .dockerignore  Dockerfile  Readme.md  main.ipynb  mainOld.ipynb  manifest.md  pyproject.toml
data/: embeddings_approach_test_results.xlsx  llm_approach_test_results.xlsx  test_cleaned.xlsx  test_with_candidates.xlsx  tfidf_svm_approach_test_results.xlsx  train.xlsx  train_cleaned.xlsx  train_grouped_categories.xlsx  train_with_candidates.xlsx
resources/: referentiel_foodex.xlsx  test.json
