[project]
name = "test-technique-chemosens"
version = "0.1.0"
description = "technical test of a job position"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.38.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "umap-learn>=0.5.9.post2",
]
