[project]
name = "test-technique-chemosens"
version = "0.1.0"
description = "technical test of a job position"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
]
