[project]
name = "test-technique-chemosens"
version = "0.1.0"
description = "technical test of a job position"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.1.12",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "spacy>=3.8.7",
]
